# Agri-Leak

./: .gitignore  README.md  SKILL.md  app.py  cost_per_ton.xlsx  main.py  pyproject.toml  start.sh
.kiro/specs/frontend-theme-redesign/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .env.example  main.py  variety_mapping.json
data/: 1-QUINZAINE 25-26-19.xlsx  15-04-26 V2 -SUIVI JOURNALIER DES TONNAGES  QNZ N° 21.xlsx  30-04-26 V2 -SUIVI JOURNALIER DES TONNAGES  QNZ N° 22.xlsx
data/output/: analytics.duckdb
data/processed/: costs_qnz19_d1_22.parquet  tonnage_combined.parquet  tonnage_qnz22.parquet
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: ChartContainer.jsx  ChatPopup.jsx  GlobalSearch.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/context/: QnzContext.jsx
frontend/src/pages/: Comparison.jsx  CostBreakdown.jsx  CostPerTon.jsx  Dashboard.jsx  Domain.jsx  Domains.jsx  ExportTonnage.jsx  Groups.jsx  Productivity.jsx  Reports.jsx  Segments.jsx  Varieties.jsx
frontend/src/services/: api.js
frontend/src/theme/: ThemeContext.jsx  chartTheme.js  themeConfig.js
frontend/src/utils/: chartTheme.js
scripts/: analytics.py  cleanup.py  export_analytics.py  export_ingest.py  ingest.py
