[project]
name = "data-leak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "xlsxwriter>=3.2.9",
]
